generator client {
  provider = "prisma-client"
  output   = "./generated"
}

datasource db {
  provider = "postgresql"
}

model Usuario {
  id       Int       @id @default(autoincrement())
  usuario  String    @unique
  senha    String
  enquetes Enquete[]
  votos Voto[]
}

model Enquete {
  id           Int            @id @default(autoincrement())
  titulo       String
  status       ENQUETE_STATUS
  data_criacao DateTime       @default(now())
  data_inicio  DateTime
  data_fim     DateTime
  criador      Usuario        @relation(fields: [criador_id], references: [id], onDelete: Cascade)
  criador_id   Int
  opcoes       Opcao[]
}

model Opcao {
  id         Int     @id @default(autoincrement())
  texto      String
  ordem      Int
  enquete    Enquete @relation(fields: [enquete_id], references: [id], onDelete: Cascade)
  enquete_id Int
  votos      Voto[]
}

model Voto {
  id         Int     @id @default(autoincrement())
  opcao      Opcao   @relation(fields: [opcao_id], references: [id], onDelete: Cascade)
  opcao_id   Int
  usuario    Usuario @relation(fields: [usuario_id], references: [id], onDelete: SetDefault)
  usuario_id Int     @default(0)
}

enum ENQUETE_STATUS {
  ATIVA
  FECHADA
}
